# aws-service-catalog-puppet

./: .coveragerc  .gitallowed  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.CI  Makefile.CodeQuality  Makefile.Project  Makefile.Puppet  Makefile.Test  NOTICE  Pipfile  README.md  build_details_single.csv  luigi.cfg  manifest-expanded.yaml  manifest-task-reference-filtered.yaml  mine.yaml  nose2.cfg  para.txt  pyproject.toml  setup.py  terraform.tfstate  test_writer-v2.py  test_writer.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: workflow.yml
account-vending/: org-bootstrap.template.yaml
account-vending/account-bootstrap-shared-product/: product.template.yaml
account-vending/account-creation-product/: product.template.yaml
account-vending/account-creation-shared-product/: README.md  product.template.yaml
account-vending/account-creation-shared-product/src/: handler.py
docs/: requirements.txt  tips.md  whatisthis.xml
docs/source/: conf.py  index.rst
docs/source/puppet/: actions.rst  bootstrapping_spokes.rst  caching.rst  cli.rst  contributing.rst  designing_your_manifest.md  designing_your_manifest.rst  execution_modes.rst  faq.rst  getting_up_and_running.md  getting_up_and_running.rst  intrinsic_functions.rst  kitchen_sink.yaml  kitchen_sink_example.rst  notifications.md  project_assurance.rst  sharing_a_portfolio.rst  splitting.rst  upgrading.md  using_the_cli.rst  using_the_sdk.rst  utils.md  utils.rst  what_is_this.md  whatisthis.xml
docs/uml/: launch.puml  share.puml
features/: environment.py  mock_utils.py
features/steps/: __init__.py  assertion_steps.py  common_steps.py  precondition_steps.py  task_creation_steps.py
features/workflow/apps/: provision_app_task.feature
features/workflow/assertions/: do_assert_task.feature
features/workflow/c7n/: create_custodian_role_task.feature  forward_events_for_account_tasks.feature  forward_events_for_region_tasks.feature  prepare_c7n_hub_account_task.feature
features/workflow/codebuild_runs/: do_execute_code_build_run_task.feature
features/workflow/general/: boto3_task.feature  terminate_cloudformation_stack_task.feature
features/workflow/generate/: generate_policies_task.feature
features/workflow/lambda_invocations/: do_invoke_lambda_task.feature
features/workflow/launch/: do_terminate_product_task.feature  provision_product_task.feature
features/workflow/organizational_units/: get_or_create_organizational_unit_task.feature
servicecatalog_puppet/: .gitignore  asset_helpers.py  asset_helpers_unit_test.py  aws.py  cli.py  cli_command_helpers.py  cli_command_helpers_unit_test.py  cli_commands.py  cli_commands_unit_test.py  cli_test.py  config.py  config_unit_test.py  constants.py  constants_unit_test.py  core.py  environmental_variables.py  environmental_variables_parameters.py  example-config-small.yaml  example-config-tinyl.yaml  luigi_tasks_and_targets.py  luigi_tasks_and_targets_unit_test.py  macros.py  manifest.yaml  manifest_utils.py  manifest_utils_for_expand_unit_test.py  manifest_utils_for_explode_unit_test.py  manifest_utils_for_launches.py  manifest_utils_for_spoke_local_portfolios.py  manifest_utils_for_spoke_local_portfolios_unit_test.py  manifest_utils_unit_test.py  print_utils.py  print_utils_unit_test.py  puppet_schema_extensions.py  remote_config.py  remote_config_unit_test.py  requirements-test.txt  requirements.txt  schema.yaml  sdk.py  serialisation_utils.py  (+12 more)
servicecatalog_puppet/commands/: bootstrap.py  bootstrap_org_master.py  bootstrap_spoke.py  deploy.py  expand.py  export_stats.py  graph.py  list_launches.py  management.py  manifest.py  misc.py  orgs.py  show_codebuilds.py  show_pipelines.py  spoke_management.py  task_reference.py  task_reference_for_launches_unit_test.py  task_reference_for_stacks_unit_test.py  task_reference_test.py  task_reference_unit_test.py  version.py
servicecatalog_puppet/manifests/: manifest-quickstart.yaml  manifest-simple.yaml
servicecatalog_puppet/templates/: associations.template.yaml.j2  launch_role_constraints.template.yaml.j2  policies.template.yaml.j2  product.template.yaml.j2  shares.template.yaml.j2  update_resource_constraints.template.yaml.j2
servicecatalog_puppet/utils/: manifest.py
servicecatalog_puppet/waluigi/: cache_download_client.py  constants.py  dag_utils.py  event_recorder.py  queue.py  runner_factory.py  scheduler.py  scheduler_factory.py  scheduler_unit_test.py  tasks.py
servicecatalog_puppet/workflow/: assertions.py  codebuild_runs.py  dependency.py  general.py  general_c_unit_test.py  general_custom_test.py  general_test.py  general_unit_test.py  generate.py  generate_c_unit_test.py  generate_test.py  lambda_invocations.py  lambda_invocations_test.py  launch.py  launch_c_unit_test.py  launch_test.py  management.py  management_c_unit_test.py  management_test.py  manifest.py  manifest_c_unit_test.py  manifest_test.py  portfoliomanagement.py  portfoliomanagement_c_unit_test.py  portfoliomanagement_test.py  provisioning.py  provisioning_c_unit_test.py  provisioning_test.py  provisioning_unit_test.py  runner.py  runner_test.py  spoke_local_portfolios.py  spoke_local_portfolios_c_unit_test.py  spoke_local_portfolios_test.py  tasks.py  tasks_c_unit_test.py  tasks_test.py  tasks_unit_tests.py  tasks_unit_tests_helper.py  workflow_utils.py
site/: Gemfile  Makefile  config.rb
site/source/: sitemap.html.erb
testing/: .gitignore  e2e.sh
tests/: buildspec.yaml
tests/continuous-runner/: has_deployed_to.js  package-lock.json  package.json  serverless.yml  setup_deploy_to.js
(+481 files in other folders)
