# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-service-catalog-puppet"
version = "0.255.0"
description = "Making it easier to deploy ServiceCatalog products"
readme = "README.md"
authors = [
    {name = "Eamonn Faherty", email = "aws-service-catalog-tools@amazon.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.4",
    "pyyaml==6.0.1",
    "jinja2==3.1.6",
    "click==8.1.7",
    "boto3==1.40.6",
    "better-boto==0.42.0",
    "terminaltables==3.1.0",
    "luigi==3.6.0",
    "cfn-flip==1.2.3",
    "networkx==2.6.3",
    "troposphere==4.8.3",
    "awacs==2.0.2",
    "jmespath==1.0.1",
    "deepdiff>=5.3.0",
    "deepmerge>=0.2.1",
    "yamale>=3.0.8",
    "colorama>=0.4.5",
    "orjson>=3.8.0",
    "MarkupSafe==2.0.1",
    "behave>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "codecov>=2.1.7",
    "behave>=1.2.6",
    "pylint>=2.5.3",
    "black==24.10.0",
    "pycodestyle>=2.6.0",
    "nose2>=0.10.0",
    "viztracer>=0.15.4",
    "importanize>=0.7.0",
]

[project.scripts]
servicecatalog-puppet = "servicecatalog_puppet.cli:cli"

[project.urls]
Homepage = "https://service-catalog-tools-workshop.com/"
Repository = "https://github.com/awslabs/aws-service-catalog-puppet-framework"
Issues = "https://github.com/awslabs/aws-service-catalog-puppet-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["servicecatalog_puppet"]
